--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -5,19 +5,43 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
+        <groupId>com.epam.demo</groupId>
         <artifactId>stage-2-module-1-build-tools-maven</artifactId>
-        <groupId>org.example</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <groupId>com.epam.demo</groupId>
     <artifactId>demo</artifactId>
+    <version>1.3.5</version>
+    <packaging>jar</packaging>
+	
     <dependencies>
-        <!-- something should be here-->
-
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+		  <groupId>org.junit.jupiter</groupId>
+		  <artifactId>junit-jupiter-engine</artifactId>
+		  <scope>test</scope>
+		</dependency>
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-params</artifactId>
-            <scope>test</scope>
+            <groupId>com.epam.utils</groupId>
+            <artifactId>utils</artifactId>
+            <version>1.3.5</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>9</source>
+                    <target>9</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
